--- a/koha-tmpl/opac-tmpl/css/en/opac-addbookbybiblionumber.tmpl
+++ b/koha-tmpl/opac-tmpl/css/en/opac-addbookbybiblionumber.tmpl
@@ -4,7 +4,7 @@
 <p><label>Title</label><!-- TMPL_VAR NAME="title" --></p>
 <p><label>Author</label><!-- TMPL_VAR NAME="author" --></p>
 <h2>Select bookshelf</h2>
-<form>
+<form action="/cgi-bin/koha/opac-addbookbybiblionumber.pl" method="get">
 	<p><label>Add to virtual shelf</label><!-- TMPL_VAR NAME="CGIbookshelves" --></p>
 <h2>or add to a new bookshelf</h2>
 	<p><input type="text" name="newbookshelf" maxlength=40 size=40>
