--- a/koha-tmpl/opac-tmpl/css/en/opac-basket.tmpl
+++ b/koha-tmpl/opac-tmpl/css/en/opac-basket.tmpl
@@ -1,10 +1,10 @@
 <!-- TMPL_INCLUDE NAME="opac-basket-top.inc" -->
 <!-- TMPL_IF NAME="print_basket" -->
-<body onload='print()' style="padding-bottom:20px;">
+<body onload="print();" style="padding-bottom:20px;">
 <!-- TMPL_ELSE -->
 <body style="padding-bottom:20px;">
 <!-- TMPL_INCLUDE NAME="opac-basket-menu.inc" -->
-<form name='myform'><input type='hidden' name='records'></form>
+<form name="myform"><input type="hidden" name="records"></form>
 <!-- /TMPL_IF -->
 <div id="mainbloc" style="margin-top:10px;margin-bottom:20px;padding-top:10px;padding-bottom:10px;">
 <!-- TMPL_IF NAME="verbose" -->
@@ -111,8 +111,8 @@
 			</tr>
 		<!-- /TMPL_IF -->
 				<tr>
-					<th>location</th>
-					<th>barcode</th>
+					<th>Location</th>
+					<th>Barcode</th>
 				</tr>
 				<!-- TMPL_LOOP NAME="ITEM_RESULTS" -->
 					<tr>
@@ -134,7 +134,7 @@
 		<tr align='center'>
 			<!-- TMPL_UNLESS NAME="print_basket" -->
 			<td style="border:0;">
-				<form>&nbsp;<input type='checkbox' value='<!-- TMPL_VAR NAME="biblionumber" -->' onClick='selRecord(value,checked)'>&nbsp;</form>
+				<form><input type="checkbox" value="<!-- TMPL_VAR NAME="biblionumber" -->" onClick="selRecord(value,checked);"></form>
 			</td>
 			<!-- /TMPL_UNLESS -->
 			<td style="border:0;width:95%;">
@@ -148,10 +148,10 @@
 				<tr valign="top">
 					<td>
 						<!-- TMPL_IF name="isbn" --><b>ISBN:</b><!-- TMPL_VAR NAME="ISBN" --><br><!-- /TMPL_IF -->
-						<!-- TMPL_IF name="subtitle" --><b>subtitle:</b><!-- TMPL_VAR NAME="subtitle" --><br><!-- /TMPL_IF -->
+						<!-- TMPL_IF name="subtitle" --><b>Subtitle:</b><!-- TMPL_VAR NAME="subtitle" --><br><!-- /TMPL_IF -->
 						<!-- TMPL_IF name="author" --><b>Author:</b> <!-- TMPL_VAR NAME="author" --><br><!-- /TMPL_IF -->
 						<!-- TMPL_IF name="additional" --><b>Additional authors:</b><!-- TMPL_VAR NAME="additional" --><br><!-- /TMPL_IF -->
-						<!-- TMPL_IF name="publishercode" --><b>published by :</b><!-- TMPL_VAR NAME="publishercode" --><!-- /TMPL_IF -->
+						<!-- TMPL_IF name="publishercode" --><b>Published by :</b><!-- TMPL_VAR NAME="publishercode" --><!-- /TMPL_IF -->
 						<!-- TMPL_IF name="publicationyear" --><b>in </b><!-- TMPL_VAR NAME="publicationyear" --><!-- /TMPL_IF -->
 						<!-- TMPL_IF name="pages" -->, <!-- /TMPL_IF --><!-- TMPL_VAR name="pages" -->
 						<!-- TMPL_IF name="size" -->, <!-- /TMPL_IF --><!-- TMPL_VAR name="size" --><br>
@@ -168,8 +168,8 @@
 					</td>
 				</tr>
 				<tr>
-					<th>location</th>
-					<th>barcode</th>
+					<th>Location</th>
+					<th>Barcode</th>
 				</tr>
 				<!-- TMPL_LOOP NAME="ITEM_RESULTS" -->
 					<tr>
