--- a/koha-tmpl/intranet-tmpl/default/en/search.marc/dictionary.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/search.marc/dictionary.tmpl
@@ -107,8 +107,8 @@ a.catalogue:hover {
 						<!-- TMPL_ELSE -->
 							<td>
 						<!-- /TMPL_IF -->
-							<a  href="javascript:SelectEntry('<!-- TMPL_VAR NAME="mainentry" ESCAPE="URL" -->',<!-- TMPL_VAR NAME="anindex" ESCAPE="URL"  -->,0)" class="button catalogue">select</a>
-							<a  href="javascript:SelectEntry('<!-- TMPL_VAR NAME="mainentry" ESCAPE="URL" -->',<!-- TMPL_VAR NAME="anindex" ESCAPE="URL"  -->,1)" class="button catalogue">sel&amp;close</a>
+							<a  href="javascript:SelectEntry('<!-- TMPL_VAR NAME="jamainentry" ESCAPE="URL" -->',<!-- TMPL_VAR NAME="anindex" ESCAPE="URL"  -->,0)" class="button catalogue">select</a>
+							<a  href="javascript:SelectEntry('<!-- TMPL_VAR NAME="jamainentry" ESCAPE="URL" -->',<!-- TMPL_VAR NAME="anindex" ESCAPE="URL"  -->,1)" class="button catalogue">sel&amp;close</a>
 						</td>
 					</tr>
 				<!-- /TMPL_LOOP -->
@@ -151,8 +151,8 @@ a.catalogue:hover {
 						<!-- TMPL_VAR NAME="count" --> biblio(s)
 					</td>
 					<td <!-- TMPL_IF NAME="even" -->class="hilighted"<!-- /TMPL_IF -->>
-							<a  href="javascript:SelectEntry('<!-- TMPL_VAR NAME="value" ESCAPE="URL" -->',<!-- TMPL_VAR NAME="anindex" ESCAPE="URL"  -->,0)" class="button catalogue">Select</a>
-							<a  href="javascript:SelectEntry('<!-- TMPL_VAR NAME="value" ESCAPE="URL" -->',<!-- TMPL_VAR NAME="anindex" ESCAPE="URL"  -->,1)" class="button catalogue">Sel&amp;close</a>
+							<a  href="javascript:SelectEntry('<!-- TMPL_VAR NAME="javalue" ESCAPE="URL" -->',<!-- TMPL_VAR NAME="anindex" ESCAPE="URL"  -->,0)" class="button catalogue">Select</a>
+							<a  href="javascript:SelectEntry('<!-- TMPL_VAR NAME="javalue" ESCAPE="URL" -->',<!-- TMPL_VAR NAME="anindex" ESCAPE="URL"  -->,1)" class="button catalogue">Sel&amp;close</a>
 					</td>
 				</tr>
 				<!-- /TMPL_LOOP -->
