Added link to 'reservereport.pl'.

--- a/koha-tmpl/intranet-tmpl/default/en/reports/reports-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/reports/reports-home.tmpl
@@ -39,6 +39,7 @@
 		<li><a href="/cgi-bin/koha/overdue.pl">Overdue items</a></li>
 		<li><a href="/cgi-bin/koha/reports/manager.pl?report_name=issues_by_borrower_category">Issues by borrower category</a></li>
 		<li><a href="/cgi-bin/koha/reports/issues_avg_stats.pl">Average loan time</a></li>
+		<li><a href="/cgi-bin/koha/reports/reservereport.pl">Reserved Items</a></li>
 	</ul>
 </div>
 </div>
