new feature : image for itemtypes.
* run updater/updatedatabase to create imageurl field in itemtypes.
* go to Koha >> parameters >> itemtypes >> modify (or add) an itemtype. You will see around 20 nice images to choose between (thanks to owen). If you prefer your own image, you also can type a complete url (http://www.myserver.lib/path/to/my/image.gif)
* go to OPAC, and search something. In the result list, you now have the picture instead of the text itemtype.

--- a/koha-tmpl/intranet-tmpl/default/en/parameters/itemtypes.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/parameters/itemtypes.tmpl
@@ -56,6 +56,10 @@ function Check(f) {
 		alert(alertString2);
 	}
 }
+
+function report_itemtype(value_to_report) {
+	Aform.imageurl.value=value_to_report;
+}
 </script>
 <div id="mainbloc">
 <!-- TMPL_IF NAME="add_form" -->
@@ -75,6 +79,13 @@ function Check(f) {
 			<p>
 				<label class="label100">Description</label>
 				<input type="text" name="description" size="40" maxlength="80" value="<!-- TMPL_VAR NAME="description" escape=HTML -->">
+			</p>
+			<p>
+				<label class="label100">Image</label>
+				<input type="text" name="imageurl" value="<!-- TMPL_VAR name="imageurl" -->" size="40" maxlength="80">
+				<!-- TMPL_LOOP NAME="IMAGESLOOP" -->
+					 <a href="javascript:report_itemtype('<!-- TMPL_VAR name="KohaImage" -->')"><img src="/opac-tmpl/<!-- TMPL_VAR name="opacthemes" -->/itemtypeimg/<!-- TMPL_VAR name="KohaImage" -->"></a>
+				<!-- /TMPL_LOOP -->
 			</p>
 			<p>
 				<label class="label100">Not for loan</label>
@@ -138,7 +149,16 @@ function Check(f) {
 	</tr>
 	<!-- TMPL_LOOP NAME="loop" -->
 		<tr>
-			<td><!-- TMPL_VAR NAME="itemtype" --></td>
+			<td>
+				<!-- TMPL_IF name="imageurl" -->
+					<!-- TMPL_IF name="absoluteurl" -->
+						<img src="<!-- TMPL_VAR name="imageurl" -->">
+					<!-- TMPL_ELSE -->
+						<img src="/opac-tmpl/<!-- TMPL_VAR name="opacthemes" -->/itemtypeimg/<!-- TMPL_VAR name="imageurl" -->">
+					<!-- /TMPL_IF -->
+				<!-- /TMPL_IF -->
+				<!-- TMPL_VAR NAME="itemtype" -->
+			</td>
 			<td><!-- TMPL_VAR NAME="description" --></td>
 			<td><!-- TMPL_IF NAME="notforloan" -->Yes<!-- /TMPL_IF --></td>
 			<td><!-- TMPL_UNLESS name="notforloan" -->
