new feature : image for itemtypes.
* run updater/updatedatabase to create imageurl field in itemtypes.
* go to Koha >> parameters >> itemtypes >> modify (or add) an itemtype. You will see around 20 nice images to choose between (thanks to owen). If you prefer your own image, you also can type a complete url (http://www.myserver.lib/path/to/my/image.gif)
* go to OPAC, and search something. In the result list, you now have the picture instead of the text itemtype.

--- a/koha-tmpl/intranet-tmpl/default/en/help/admin/itemtypes.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/help/admin/itemtypes.tmpl
@@ -10,6 +10,9 @@
 
 <p>"Renewals allowed" says how many times an items of this type may be renewed.</p>
 
+<p>"imageurl" : you will see around 20 nice images to choose between (depending on your opacthemes system preference). Click on one of them to choose it as image for itemtype. If you prefer your own image, you also can type a complete url (http://www.myserver.lib/path/to/my/image.gif)
+Once you've choosen an image, in the result list of OPAC, you now have the picture instead of the text itemtype</p>
+
 <p>Item types are useful for many things, and <b>very</b> important in controlling how Koha works :</p>
 <ul>
     <li>Borrowers can search on itemtypes</li>
