--- a/koha-tmpl/intranet-tmpl/default/en/acqui.simple/additem-nomarc.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui.simple/additem-nomarc.tmpl
@@ -47,8 +47,8 @@
 		<p>
 			<label>Branch:</label>
 			<select name="homebranch">
-			<!-- TMPL_LOOP NAME="BRANCHES" -->
-				<option value="<!-- TMPL_VAR NAME="branchcode" -->"><!-- TMPL_VAR NAME="branchname" --></option>
+			<!-- TMPL_LOOP name="branchloop" -->
+				<option value="<!-- TMPL_VAR name="value" -->" <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->><!-- TMPL_VAR name="branchname" --></option>
 			<!-- /TMPL_LOOP -->
 			</select>
 		</p>
@@ -56,7 +56,7 @@
 		<p><label>Notes:</label><textarea name="itemnotes" cols="30" rows="6"></textarea></p>
 	</div>
 	<div id="bloc25">
-		<h2 class="catalogue">Add to existing group:</h2>
+		<h3 class="catalogue">Add to existing group:</h2>
 		<p>
 			<label>Group:</label><select name="biblioitemnumber">
 			<!-- TMPL_LOOP NAME="BIBITEMS" -->
@@ -67,16 +67,14 @@
 			<!-- /TMPL_LOOP -->
 			</select>
 		</p>
-		<p><input type="submit" name="existinggroup" value="Add New Item to Existing Group"></p>
-	</div>
-	<div id="bloc25">
-		<h2 class="catalogue">OR Add to a new Group:</h2>
+		<p><input type="submit" name="existinggroup" value="Add New Item to Existing Group" class="button catalogue"></p>
+		<h3 class="catalogue">OR Add to a new Group:</h2>
 		<p>
 			<label>Format:</label>
 			<select name="itemtype">
-				<!-- TMPL_LOOP NAME="ITEMTYPES" -->
-					<option value="<!-- TMPL_VAR NAME="itemtype" -->"><!-- TMPL_VAR NAME="description" --></option>
-				<!-- /TMPL_LOOP -->
+			<!-- TMPL_LOOP name="itemtypeloop" -->
+				<option value="<!-- TMPL_VAR name="value" -->" <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->><!-- TMPL_VAR name="description" --></option>
+			<!-- /TMPL_LOOP -->
 			</select>
 		</p>
 		<p><label>ISBN:</label><input name="isbn" size="40"></p>
