--- a/koha-tmpl/opac-tmpl/npl/en/opac-readingrecord.tmpl
+++ b/koha-tmpl/opac-tmpl/npl/en/opac-readingrecord.tmpl
@@ -24,6 +24,7 @@ You have never borrowed anything from the library.
 <td><a href="/cgi-bin/koha/opac-detail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->"><!-- TMPL_VAR NAME="title" --></a></td>
 <td><!-- TMPL_VAR NAME="author" --></td>
 <td><!-- TMPL_IF NAME="returndate" --><!-- TMPL_VAR NAME="returndate" --><!-- TMPL_ELSE --><em>(Checked out)</em><!-- /TMPL_IF --></td>
+<td><a href="/cgi-bin/koha/opac-review.pl?biblionumber=<!--TMPL_VAR NAME="biblionumber"-->">Review</a></td>
 </tr>
 
 <!-- /TMPL_LOOP -->
