--- a/koha-tmpl/intranet-tmpl/default/en/members/member.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/members/member.tmpl
@@ -23,8 +23,8 @@
 		<tr>
 			<th>&nbsp;</th>
 			<th>Card</th>
-			<th>Surname</th>
-			<th>Firstname</th>
+			<th>Name</th>
+			<th>Branch</th>
 			<th>Category</th>
 			<th>Address</th>
 			<th>OD/Issues</th>
@@ -39,8 +39,8 @@
 			<!-- /TMPL_IF -->
 				<td><!-- TMPL_VAR NAME="count" --></td>
 				<td><!-- TMPL_VAR NAME="cardnumber" --></td>
-				<td><a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="surname" --></a></td>
-				<td><!-- TMPL_VAR NAME="firstname" --></a></td>
+				<td><a href="/cgi-bin/koha/members/moremember.pl?bornum=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="surname" -->, <!-- TMPL_VAR NAME="firstname" --></a></td>
+				<td><!-- TMPL_VAR name="branchcode" --></td>
 				<td><!-- TMPL_VAR NAME="categorycode" --></td>
 				<td><!-- TMPL_VAR NAME="streetaddress" --> <!-- TMPL_VAR NAME="city" --></td>
 				<td><!-- TMPL_VAR NAME="odissue" --></td>
