see mail on koha-devel : code cleaning on Search.pm + normalizing API + use of biblionumber everywhere (instead of bn, biblio, ...)

--- a/koha-tmpl/intranet-tmpl/default/en/acqui.simple/addbiblio-nomarc.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/acqui.simple/addbiblio-nomarc.tmpl
@@ -3,7 +3,7 @@
 <div id="mainbloc">
 	<h1 class="catalogue">Adding a new Biblio</h1>
 	
-	<div id="bloc60">
+	<div class="bloc25">
 		<h2 class="catalogue">Section One: Copyright Information </h2>
 	
 		<!-- TMPL_IF NAME="ERROR" -->
@@ -23,11 +23,11 @@
 		<p><label class="label100">&nbsp;</label><input name="seriestitle" size="40" /></p>
 		<p>Subject Headings: <i>One Subject per line</i></p>
 		<p><label class="label100">&nbsp;</label>
-			<textarea class="form-box-textarea2" name="subjectheadings" cols="30" rows="6"></textarea>
+			<textarea class="form-box-textarea2" name="subjectheadings" cols="40" rows="6"></textarea>
 		</p>
-		<label class="label100">Copyright Date:</label><input name="copyrightdate" size="40" /></p>
-		<label class="label100">Abstract:</label><textarea cols="30" rows="6" name="abstract"></textarea></p>
-		<label class="label100">Notes:</label><textarea cols="30" rows="6" name="notes"></textarea></p>
+		<p><label class="label100">Copyright Date:</label><input name="copyrightdate" size="40" /></p>
+		<p><label class="label100">Abstract:</label><textarea cols="40" rows="6" name="abstract"></textarea></p>
+		<p><label class="label100">Notes:</label><textarea cols="40" rows="6" name="notes"></textarea></p>
 		<p><input type="submit" value="Submit" class="button catalogue"></p>
 		</form>
 		* Required
