--- a/koha-tmpl/intranet-tmpl/default/en/members/moremember.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/members/moremember.tmpl
@@ -268,7 +268,7 @@
 			None
 		<!-- /TMPL_IF -->
 	</div>
-
+	<!-- TMPL_IF name="alertloop" -->
 		<div class="bloc25">
 		<h2 class="members">Alert subscriptions</h2>
 			<table>
@@ -285,6 +285,7 @@
 			<!-- /TMPL_LOOP -->
 			</table>
 		</div>
+	<!-- /TMPL_IF -->
 
 	
 </div>
