--- a/koha-tmpl/intranet-tmpl/default/en/request.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/request.tmpl
@@ -1,11 +1,11 @@
 <!-- TMPL_INCLUDE Name="cat-top.inc" -->
 <div id="mainbloc">
 	<form action="placerequest.pl" method="post" name="request">
-	<input type="hidden" name="biblio" value="<!-- TMPL_VAR NAME="bib" -->">
+	<input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->">
 	<input type="hidden" name="type" value="str8">
 	<input type="hidden" name="title" value="<!-- TMPL_VAR NAME="title" -->">
 	<h1 class="catalogue">
-		Requesting: <a href="/cgi-bin/koha/detail.pl?bib=<!-- TMPL_VAR NAME="bib" -->"><!-- TMPL_VAR NAME="title" --></a>
+		Requesting: <a href="/cgi-bin/koha/detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->"><!-- TMPL_VAR NAME="title" --></a>
 		<!-- TMPL_VAR NAME="author" -->
 	</h1>
 	<div id="bloc25">
@@ -24,7 +24,14 @@
 		<p><label class="label100">Member Number</label><input type="text" size="10" name="member"> <a href="/cgi-bin/koha/members/members-home.pl?quicksearch=1" onclick="openWindow('/cgi-bin/koha/members/members-home.pl?quicksearch=1', 'newwin'); return false;">(Quick Search)</a></p>
 		<p><label class="label100">Notes</label><input type="text" size="20" name="notes"></p>
 		<p><label class="label100">Date</label><!-- TMPL_VAR NAME="date" --></p>
-		<p><label class="label100">Pickup</label><!-- TMPL_VAR NAME="CGIbranch" --></p>
+		<p><label class="label100">Pickup</label>
+			<select name="pickup">
+				<option value="">Default</option>
+			<!-- TMPL_LOOP name="branchloop" -->
+				<option value="<!-- TMPL_VAR name="value" -->" <!-- TMPL_IF name="selected" -->selected<!-- /TMPL_IF -->><!-- TMPL_VAR name="branchname" --></option>
+			<!-- /TMPL_LOOP -->
+			</select>
+</p>
 		<p>
 			<label class="label100">Request</label><input type="checkbox" name="request" value="any">Next Available, or choose from list below
 		</p>
@@ -89,7 +96,7 @@
 					<tr>
 						<td>
 							<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->">
-							<input type="hidden" name="biblio" value="<!-- TMPL_VAR NAME="biblionumber" -->">
+							<input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->">
 							<select name="rank-request">
 								<!-- TMPL_IF Name="wait" -->
 									<option value="W" selected>Waiting</option>
@@ -126,7 +133,7 @@
 						</td>
 						<td>
 							<!-- TMPL_IF Name="wait" -->
-								<a href="/cgi-bin/koha/detail.pl?bib=<!-- TMPL_VAR NAME=''biblionumber" -->&amp;type=intra" onClick="openWindow(this, 'Item', 480, 640); return false;">
+								<a href="/cgi-bin/koha/detail.pl?biblionumber=<!-- TMPL_VAR NAME=''biblionumber" -->&amp;type=intra" onClick="openWindow(this, 'Item', 480, 640); return false;">
 									<!-- TMPL_VAR NAME="barcode" -->
 								</a>
 							<!-- TMPL_ELSE -->
