Removed extra html tags which were creating mistakes in display

--- a/koha-tmpl/intranet-tmpl/default/en/members/readingrec.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/en/members/readingrec.tmpl
@@ -12,16 +12,16 @@
 	<table>
 	<tr>
 		<th>
-			<a href="readingrec.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->&amp;order=title&amp;limit=<!-- TMPL_VAR NAME="limit" -->">Title</th>
+			<a href="readingrec.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->&amp;order=title&amp;limit=<!-- TMPL_VAR NAME="limit" -->">Title
 		</th>
 		<th>
-			<a href="readingrec.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->&amp;order=author&amp;limit=<!-- TMPL_VAR NAME="limit" -->">Author</th>
-		</td>
-		<th>
-			<a href="readingrec.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->&amp;limit=<!-- TMPL_VAR NAME="limit" -->"><th>Date due</th>
+			<a href="readingrec.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->&amp;order=author&amp;limit=<!-- TMPL_VAR NAME="limit" -->">Author
 		</th>
 		<th>
-			<a href="readingrec.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->&amp;order=returndate&amp;limit=<!-- TMPL_VAR NAME="limit" -->">Returned</th>
+			<a href="readingrec.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->&amp;limit=<!-- TMPL_VAR NAME="limit" -->">Date due
+		</th>
+		<th>
+			<a href="readingrec.pl?bornum=<!-- TMPL_VAR NAME="bornum" -->&amp;order=returndate&amp;limit=<!-- TMPL_VAR NAME="limit" -->">Returned
 		</th>
 		<th>
 			Volume
